# tau

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .swp  CMakeLists.txt  LICENSE.TXT  Makefile  a.out  foo.txt  leakcheck.txt  leakfind.txt  precompile_llvm.ps1  precompile_llvm.sh  readme.md  test.tau
meta/: KNOWN_BUGS.txt  leakcheck.py  tau_grammar.txt
src/: access_modifiers.h  ast.c  ast.h  ast_flags.c  ast_flags.h  ast_kinds.h  ast_node_flags.c  ast_node_flags.h  error_log.c  error_log.h  file_map.c  file_map.h  generic_inst_map.c  generic_inst_map.h  generic_instance_resolution.c  generic_instance_resolution.h  iht.c  iht.h  job_queue.c  job_queue.h  keywords.c  keywords.h  lexer.c  lexer.h  llvm_backend.cpp  llvm_backend.hpp  llvm_backend_api.h  main.c  mdg.c  mdg.h  mdght.c  mdght.h  name_mangle.c  name_mangle.h  parser.c  parser.h  post_resolution_pass.c  post_resolution_pass.h  pp_decl_clobber_table.c  pp_decl_clobber_table.h  (+38 more)
src/test/: unit_tests.c
src/utils/: allocator.c  allocator.h  alphabase32.h  aseglist.h  atomic_pool.h  atomics.h  base64.c  base64.h  c_extensions.h  dbuffer.c  dbuffer.h  debug_utils.c  debug_utils.h  error.c  error.h  evmap2.c  evmap2.h  fnv_hash.h  freelist.h  hms.c  hms.h  int_string_conversions.c  int_string_conversions.h  list.c  list.h  list_builder.c  list_builder.h  math_utils.h  panic.c  panic.h  plattform.h  pool.c  pool.h  ptrlist.h  ptrset.h  rwslock.h  sbuffer.c  sbuffer.h  stack.h  string.h  (+10 more)
src/utils/os/libc/: allocator_libc.c  allocator_libc.h  atomics_libc.c  atomics_libc.h
src/utils/os/linux/: allocator_linux.c  allocator_linux.h  allocator_linux_caching.c  allocator_linux_caching.h  plattform.c  threading_linux.c  threading_linux.h  timing_linux.c  timing_linux.h
src/utils/plattform/libc/: allocator_libc.c  allocator_libc.h  atomics_libc.c  atomics_libc.h
src/utils/plattform/linux/: plattform_linux.c  threading_linux.c  threading_linux.h  timing_linux.h
src/utils/plattform/windows/: atomics_windows.c  atomics_windows.h  plattform_windows.c  sane_windows.h  threading_windows.c  threading_windows.h  timing_windows.c  timing_windows.h
test/: baztest.tau  branchtest.t  branchtest.tau  footest.tau  llvmtest.cpp  main_test.c  main_test.h  multimodulepptest.tau  multimoduletest.t  multimoduletest.tau  pasting_breaks.tau  pp_arrays.tau  pptest.t  pptest.tau  print.t  print.tau  random.tau  run_tests.sh  structtest.t  structtest.tau  test.t  test.tau  test2.tau  unit_tests.c  unit_tests.h  valgrind_suppressions  visibility_test.t
test/bigtest/: footest.t  footest.tau
test/ci_tests/: bigtest.tau  branchtest.tau  loop_paste.tau  multimodulepptest.tau  multimoduletest.tau  no_libc.tau  pasting_breaks.tau  pp_arrays.tau  pptest.tau  run_ci_tests.sh  structtest.tau  supporttest.tau
test/ci_tests/bigtest/: bartest.tau  foo.tau
test/ci_tests/support/: libc.tau
test/error_tests/: double_main.tau
test/failing_tests/: pp_module_chain.tau
tests/: all  clean.sh  run.sh  run_all_tests.sh  run_ci_tests.sh  run_error_tests.sh  run_tests.sh  visibility_test.tau
tests/ci_tests/: bigtest.tau  decl_after_use.tau  filetree.tau  func_pp_use_after_paste.tau  loop_paste.tau  paste_stmt.tau  pp_arrays.tau  recursive_paste.tau  struct_in_mod_test.tau  struct_paste.tau  structtest.tau  supporttest.tau
tests/ci_tests/filetree/: c.tau  d.tau
tests/error_tests/: double_main.err  double_main.tau  illegal_require_and_extend.err  illegal_require_and_extend.tau  illegal_returns.err  illegal_returns.tau  illegal_root_extend.err  module_redeclaration.err  multi_resolve_error.err  multi_resolve_error.tau  nested_module_redecl.err  nested_module_redecl.tau  paste_parser_error.err  paste_parser_error.tau  pprn_loop.err  propagate_resolution_failiure.err  type_loop.err  undefined_in_pp.err  undefined_in_pp.tau  unknown_symbol_after_pastes.err  unknown_symbol_after_pastes.tau
tests/errors/: double_main.err  empty.err  illegal_require_and_extend.err  illegal_returns.err  illegal_root_extend.err  illegal_root_extend.tau  illegal_root_extend.tau.second  illegal_shadowing.err  illegal_shadowing.tau  module_redeclaration.err  module_redeclaration.tau  multi_resolve_error.err  multi_resolve_error.tau  nested_module_redecl.err  nested_module_redecl.tau  paste_parser_error.err  pprn_loop.err  pprn_loop.tau  propagate_resolution_failiure.err  propagate_resolution_failiure.tau  type_loop.err  type_loop.tau  undefined_in_pp.err  unknown_symbol_after_pastes.err
tests/failing/: illegal_break.err  illegal_break.tau  prevent_extend_error_on_module_decl_error.tau
tests/failing_tests/: conflicting_pp_globals.tau  module_extend_same_file.tau  module_redecl.tau  pp_module_chain.tau  pprn_loop.tau  simple_pp.tau  void_return.tau
tests/regular/: decl_after_use.tau  filetree.tau  module_extend_same_file.tau  multimodulepptest.tau  pasted_overload.tau  pasting_public.tau  pp_chain.tau  pprn_run_deps.tau  supporttest.out  supporttest.tau
tests/regular/filetree/: a.tau  b.tau  e.tau
tests/support/: collections.tau
